--- a/app/src/main/res/layout/item_astrologer.xml
+++ b/app/src/main/res/layout/item_astrologer.xml
@@ -128,6 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rating_reviews_container"
                 android:layout_marginTop="4dp"
+                android:layout_toStartOf="@id/call_icon"
                 android:layout_toEndOf="@id/astrologer_photo"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Expert in love and career counseling with over 10 years of experience."
