--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#F48534</color>
     <color name="gray">#666666</color>
+    <color name="light_gray">#ACACAC</color>
+    <color name="green">#4CAF50</color>
 </resources>
