--- a/app/src/main/res/layout/activity_slot_bookings.xml
+++ b/app/src/main/res/layout/activity_slot_bookings.xml
@@ -32,6 +32,38 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/dp_16"
+                android:background="@drawable/text_view_background">
+
+                <ImageView
+                    android:id="@+id/imgViewWallet"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/wallet"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tv_wallet_balance"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_wallet_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dp_4"
+                    android:layout_marginBottom="@dimen/dp_2"
+                    android:text="0"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@id/imgViewWallet"
+                    app:layout_constraintStart_toEndOf="@id/imgViewWallet"
+                    app:layout_constraintTop_toTopOf="@id/imgViewWallet" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.appcompat.widget.Toolbar>
 
         <!-- Wrapping everything inside NestedScrollView -->
@@ -55,17 +87,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/tv_wallet_balance"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="Wallet Balance: Rs. 0"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
                     <!-- Minutes Selection Title -->
                     <TextView
                         android:id="@+id/tvSelectMinutes"
@@ -76,7 +97,7 @@
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_wallet_balance" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <!-- Minutes Selection RecyclerView (Grid Layout) -->
                     <androidx.recyclerview.widget.RecyclerView
