--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_wallet"
+        android:icon="@drawable/wallet"
+        android:title="Wallet"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_history"
         android:title="History" />
