--- a/app/src/main/res/layout/activity_slot_bookings.xml
+++ b/app/src/main/res/layout/activity_slot_bookings.xml
@@ -33,6 +33,7 @@
                 android:textSize="16sp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_wallet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
