--- a/app/src/main/res/layout/item_astrologer.xml
+++ b/app/src/main/res/layout/item_astrologer.xml
@@ -1,7 +1,7 @@
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -128,22 +128,38 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rating_reviews_container"
                 android:layout_marginTop="4dp"
-                android:layout_toStartOf="@id/call_icon"
                 android:layout_toEndOf="@id/astrologer_photo"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Expert in love and career counseling with over 10 years of experience."
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp" />
 
-            <!-- Call Icon -->
-            <ImageView
+            <TextView
+                android:id="@+id/chat_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/astrologer_description"
+                android:layout_marginTop="@dimen/dp_4"
+                android:layout_marginEnd="@dimen/dp_16"
+                android:layout_toStartOf="@id/call_icon"
+                android:background="@drawable/button_background"
+                android:paddingHorizontal="@dimen/dp_16"
+                android:paddingVertical="@dimen/dp_8"
+                android:text="Chat"
+                android:textColor="@color/white" />
+
+            <TextView
                 android:id="@+id/call_icon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/astrologer_description"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="Call Icon"
-                android:src="@drawable/telephone_call_svgrepo_com" />
+                android:layout_marginTop="@dimen/dp_4"
+                android:background="@drawable/button_background"
+                android:paddingHorizontal="@dimen/dp_16"
+                android:paddingVertical="@dimen/dp_8"
+                android:text="Call"
+                android:textColor="@color/white" />
 
         </RelativeLayout>
 
