--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#F48534</color>
+    <color name="orange_50">#80F48534</color>
     <color name="gray">#666666</color>
     <color name="light_gray">#ACACAC</color>
     <color name="green">#4CAF50</color>
