Added call service changes and made changes to enable and disable call service

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Iastro" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="Theme.Iastro" parent="Theme.MaterialComponents.Light.Bridge">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Button" parent="Theme.AppCompat"/>
 
 </resources>
