--- a/app/src/main/res/layout/activity_slot_bookings.xml
+++ b/app/src/main/res/layout/activity_slot_bookings.xml
@@ -205,6 +205,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <com.zegocloud.uikit.prebuilt.call.invite.widget.ZegoSendCallInvitationButton
+                        android:id="@+id/zegoCallButton"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:visibility="invisible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/chatButton"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <Button
                         android:id="@+id/callButton"
                         android:layout_width="0dp"
@@ -213,6 +223,7 @@
                         android:background="@drawable/button_background"
                         android:padding="12dp"
                         android:text="Call"
+                        android:gravity="center"
                         android:textColor="@android:color/white"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
